2013-08-23  Herbert Xu <herbert@gondor.apana.org.au>

	* Propagate EXP_QPAT in subevalvar.
	* Initialise OPTIND after importing environment.
	* Fixed argument parsing crash in test.

2013-03-12  Peter Rosin <peda@lysator.liu.se>

	* Add newline when tracing in poplocalvars.

2013-01-10  Jérémie Courrèges-Anglas <jca+dash@wxcvbn.org>

	* Markup fixes in manual for mandoc 1.12.1.

2012-12-03  Harald van Dijk <harald@gigawatt.nl>

	* Use PRIdMAX instead of %j in printf.

2012-07-20  Kimo Rosenbaum <kimor79@yahoo.com>

	* Fix typo for wait in manual.

2012-06-09  Christoph Mathys <eraserix@gmail.com>

	* Add support for ulimit -r.

2012-03-11  Jim Meyering  <meyering@redhat.com>

	* Avoid overflow for very long variable name.
	$ perl -le 'print "v"x(2**31+1) ."=1"' | dash

2012-02-25  Herbert Xu <herbert@gondor.apana.org.au>

	* Sanitise environment variable names on entry.

2011-08-17  David S. Miller <davem@davemloft.net>

	* Allow building without LINEO support.
	* Add top-level autogen.sh.

2011-07-26  Harald van Dijk <harald@gigawatt.nl>

	* Avoid imaxdiv when only one of the results is wanted.

2010-07-09  maximilian attems <max@stro.at>

	* Fix klibc DEBUG compilation.

2011-07-09  Herbert Xu <herbert@gondor.apana.org.au>

	* Merge SKIPFUNC/SKIPFILE and only clear SKIPFUNC when leaving dotcmd.

2011-07-08  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.7.

2011-07-07  Herbert Xu <herbert@gondor.apana.org.au>

	* Optimize dash -c "command" to avoid a fork.
	* Eliminate unnecessary promotion in echocmd.

2011-05-25  Jim Meyering  <meyering@redhat.com>

	* Avoid using undefined handler.

2011-05-23  Jim Meyering  <meyering@redhat.com>

	* Avoid gcc warning: variable 'oldstackp' set but not used.
	* Avoid clang warning about dead store to "size".

2011-05-22  Jonathan Nieder <jrnieder@gmail.com>

	* Make outc an inline function.

2011-05-02  Kalle Olavi Niemitalo <kon@iki.fi>

	* Remove spurious space in descriptions of PS1, PS2, PS4.
